force-app/main/default/objects/tdc_tsw__SMS_Unsubscribes__c/fields/tdc_tsw__Contact__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SMS Unsubscribes</relationshipLabel>
    <relationshipName>SMS_Unsubscribess</relationshipName>
    <type>Lookup</type>
</CustomField>