force-app/main/default/objects/tdc_tsw__SMS_Unsubscribes__c/fields/tdc_tsw__Lead__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>SMS Unsubscribess</relationshipLabel>
    <relationshipName>SMS_Unsubscribess</relationshipName>
    <type>Lookup</type>
</CustomField>