force-app/main/default/objects/tdc_tsw__SMS_Unsubscribes__c/fields/tdc_tsw__Message__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Message__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Message</label>
    <referenceTo>tdc_tsw__Message__c</referenceTo>
    <relationshipLabel>SMS Unsubscribes</relationshipLabel>
    <relationshipName>SMS_Unsubscribes</relationshipName>
    <type>Lookup</type>
</CustomField>