force-app/main/default/objects/tdc_tsw__SMS_Unsubscribes__c/fields/tdc_tsw__Object__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Object__c</fullName>
    <description>Name of the object which the unsubscriber number was on.</description>
    <label>Object</label>
    <length>30</length>
    <type>Text</type>
</CustomField>