force-app/main/default/objects/tdc_tsw__SMS_Unsubscribes__c/fields/tdc_tsw__Phone_Number2__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Phone_Number2__c</fullName>
    <description>To show Phone Number in single format</description>
    <formula>IF(tdc_tsw__Phone_Number__c &lt;&gt; Null || tdc_tsw__Phone_Number__c &lt;&gt; &quot;&quot;,
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(tdc_tsw__Phone_Number__c, &quot; &quot;, &quot;&quot;),&quot;(&quot;,&quot;&quot; ), &quot;)&quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot;_&quot;,&quot;&quot;),&quot;.&quot;,&quot;&quot;),&quot;+&quot;,&quot;&quot;),&quot;,&quot;,&quot;&quot;),&quot;/&quot;,&quot;&quot;),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone Number</label>
    <type>Text</type>
</CustomField>