force-app/main/default/objects/tdc_tsw__SMS_Unsubscribes__c/fields/tdc_tsw__Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Phone_Number__c</fullName>
    <description>Use to store the unsubscriber number.</description>
    <label>Phone Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>