force-app/main/default/objects/tdc_tsw__SMS_Unsubscribes__c/fields/tdc_tsw__RecordId__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__RecordId__c</fullName>
    <description>Id of the record unsubscribed.</description>
    <label>RecordId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>