force-app/main/default/objects/tdc_tsw__SMS_Unsubscribes__c/fields/tdc_tsw__Sender_Number__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Sender_Number__c</fullName>
    <description>use to store the sender number of the org.</description>
    <label>Sender Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>