force-app/main/default/objects/tdc_tsw__SMS_Unsubscribes__c/fields/tdc_tsw__SMS_Opt_Out_In__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__SMS_Opt_Out_In__c</fullName>
    <label>SMS Opt Out/In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opt-Out</fullName>
            </value>
            <value>
                <fullName>Opt-In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>