force-app/main/default/objects/tdc_tsw__SMS_Unsubscribes__c/fields/tdc_tsw__userID__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__userID__c</fullName>
    <description>To contain the id of User</description>
    <label>User Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>